apps/observability/base/resources/kube-prometheus-stack/virtual-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-prometheus
  namespace: observability
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: https-prometheus
  hostnames:
    - prometheus.svc.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-alertmanager
  namespace: observability
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
      sectionName: https-alertmanager
  hostnames:
    - alert.svc.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-alertmanager
          port: 9093
